Accept missing user agents and mark them suspect
